--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -135,6 +135,10 @@
       <Project>{DF7C1145-E90C-486B-ACEC-543B42CF083F}</Project>
       <Name>PipeServer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Service\Service.csproj">
+      <Project>{5c3289ab-b65d-42f8-bfd0-21c61619729a}</Project>
+      <Name>Service</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tray\Tray.csproj">
       <Project>{3E31CCE4-D06A-4F02-A3E8-981B9033CA32}</Project>
       <Name>Tray</Name>
