--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -8,6 +8,7 @@
   <repository path="..\NotificationGUI\packages.config" />
   <repository path="..\PipeClient\packages.config" />
   <repository path="..\PipeServer\packages.config" />
+  <repository path="..\Power\packages.config" />
   <repository path="..\Service\packages.config" />
   <repository path="..\SetupHelper\packages.config" />
   <repository path="..\Tray\packages.config" />
