--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,11 +4,12 @@
   <repository path="..\Debugger\packages.config" />
   <repository path="..\FOGService.Tests\packages.config" />
   <repository path="..\Handlers\packages.config" />
+  <repository path="..\Installer\packages.config" />
   <repository path="..\Modules\packages.config" />
   <repository path="..\NotificationGUI\packages.config" />
   <repository path="..\PipeClient\packages.config" />
   <repository path="..\PipeServer\packages.config" />
-  <repository path="..\Power\packages.config" />
+  <repository path="..\PowerCLI\packages.config" />
   <repository path="..\Service\packages.config" />
   <repository path="..\SetupHelper\packages.config" />
   <repository path="..\Tray\packages.config" />
