--- a/Handlers/packages.config
+++ b/Handlers/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
-  <package id="SuperSocket" version="1.6.4" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
+  <package id="SuperWebSocket" version="0.9.0.2" targetFramework="net40" />
   <package id="WebSocket4Net" version="0.12" targetFramework="net40" />
 </packages>
