--- a/Modules/app.config
+++ b/Modules/app.config
@@ -10,6 +10,14 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SuperSocket.SocketBase" publicKeyToken="6c80000676988ebb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SuperSocket.Common" publicKeyToken="6c80000676988ebb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.4.0" newVersion="1.6.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
