Make bus bind to 127.0.0.1

--- a/Debugger/app.config
+++ b/Debugger/app.config
@@ -1,7 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine"/>
+  </configSections>
   <startup>
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <appSettings>
+    <add key="ServiceName" value="SuperWebSocket"/>
+  </appSettings>
+  <superSocket>
+    <servers>
+      <server name="SuperWebSocket"
+              serverTypeName="SuperWebSocket"
+              ip="127.0.0.1" port="1277">
+      </server>
+    </servers>
+    <serverTypes>
+      <add name="SuperWebSocket"
+           type="SuperWebSocket.WebSocketServer, SuperWebSocket" />
+    </serverTypes>
+  </superSocket>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
