--- a/Handlers/Handlers.csproj
+++ b/Handlers/Handlers.csproj
@@ -144,6 +144,8 @@
     <Compile Include="Log\Log.cs" />
     <Compile Include="Notification\Notification.cs" />
     <Compile Include="Bus\Bus.cs" />
+    <Compile Include="Power\IPower.cs" />
+    <Compile Include="Power\Windows\WindowsPower.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -152,8 +154,9 @@
     </Compile>
     <Compile Include="Registry\RegistryHandler.cs" />
     <Compile Include="Power\Power.cs" />
-    <Compile Include="User\UserData.cs" />
+    <Compile Include="User\IUser.cs" />
     <Compile Include="User\UserHandler.cs" />
+    <Compile Include="User\Windows\WindowsUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
