--- a/Handlers/Handlers.csproj
+++ b/Handlers/Handlers.csproj
@@ -145,6 +145,8 @@
     <Compile Include="Notification\Notification.cs" />
     <Compile Include="Bus\Bus.cs" />
     <Compile Include="Power\IPower.cs" />
+    <Compile Include="Power\Linux\LinuxPower.cs" />
+    <Compile Include="Power\Mac\MacPower.cs" />
     <Compile Include="Power\Windows\WindowsPower.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -155,6 +157,8 @@
     <Compile Include="Registry\RegistryHandler.cs" />
     <Compile Include="Power\Power.cs" />
     <Compile Include="User\IUser.cs" />
+    <Compile Include="User\Linux\LinuxUser.cs" />
+    <Compile Include="User\Mac\MacUser.cs" />
     <Compile Include="User\UserHandler.cs" />
     <Compile Include="User\Windows\WindowsUser.cs" />
   </ItemGroup>
