--- a/Debugger/Debugger.csproj
+++ b/Debugger/Debugger.csproj
@@ -104,6 +104,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Core\CBus\BusCommand.cs" />
+    <Compile Include="Commands\Core\Middleware\AuthenticationCommand.cs" />
+    <Compile Include="Commands\Core\Middleware\ConfigurationCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\Modules\ModuleCommand.cs" />
     <Compile Include="Debugger.cs" />
@@ -123,9 +125,7 @@
       <Name>Modules</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\Core\Middleware\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
