--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -62,7 +62,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
+    <OutputPath>..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     <FileAlignment>4096</FileAlignment>
@@ -80,7 +80,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Development|x86'">
-    <OutputPath>bin\x86\Development\</OutputPath>
+    <OutputPath>..\bin\</OutputPath>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
@@ -118,6 +118,7 @@
     <Compile Include="PrinterManager\iPrintPrinter.cs" />
     <Compile Include="PrinterManager\NetworkPrinter.cs" />
     <Compile Include="PrinterManager\Printer.cs" />
+    <Compile Include="PrinterManager\DefaultPrinterManager.cs" />
     <Compile Include="PrinterManager\PrinterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnapinClient\SnapinClient.cs" />
