--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\Handlers\packages.config" />
   <repository path="..\Installer\packages.config" />
   <repository path="..\Modules\packages.config" />
+  <repository path="..\MonoHelper\packages.config" />
   <repository path="..\NotificationGUI\packages.config" />
   <repository path="..\PowerCLI\packages.config" />
   <repository path="..\Service\packages.config" />
