--- a/Debugger/app.config
+++ b/Debugger/app.config
@@ -1,24 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine"/>
+    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <appSettings>
-    <add key="ServiceName" value="SuperWebSocket"/>
+    <add key="ServiceName" value="SuperWebSocket" />
   </appSettings>
   <superSocket>
     <servers>
-      <server name="SuperWebSocket"
-              serverTypeName="SuperWebSocket"
-              ip="127.0.0.1" port="1277">
+      <server name="SuperWebSocket" serverTypeName="SuperWebSocket" ip="127.0.0.1" port="1277">
       </server>
     </servers>
     <serverTypes>
-      <add name="SuperWebSocket"
-           type="SuperWebSocket.WebSocketServer, SuperWebSocket" />
+      <add name="SuperWebSocket" type="SuperWebSocket.WebSocketServer, SuperWebSocket" />
     </serverTypes>
   </superSocket>
   <runtime>
