--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ before_install:
 install:
   - nuget restore FOGService.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+os:
+  - linux
+  - osx
 script:
   - xbuild /p:Configuration=Release FOGService.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./bin/FOGService.Tests.dll
